--- a/solechat.html
+++ b/solechat.html
@@ -12,16 +12,23 @@
       --ok: #5dffb0;
       --err: #ff6a6a;
     }
+    /* 整頁鎖高，右邊才會自己捲 */
+    html, body {
+      height: 100%;
+    }
     body {
       margin: 0;
-      min-height: 100vh;
-      display: flex;
       background: radial-gradient(circle at top, var(--bg2) 0%, #0b0b0b 45%, #000 100%);
       color: #fff;
       font-family: "標楷體", "Times New Roman", serif;
     }
-    /* 左側狀態欄：固定 1/4 左右 */
+
+    /* 左側固定欄（不跟著捲）*/
     .sidebar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100vh;
       width: 22vw;
       max-width: 300px;
       min-width: 230px;
@@ -33,6 +40,8 @@
       display: flex;
       flex-direction: column;
       gap: 12px;
+      box-sizing: border-box;
+      z-index: 10;
     }
     .title { font-size: 1.05rem; letter-spacing: 0.08em; }
     .label { font-size: 0.7rem; opacity: 0.55; margin-top: 4px; }
@@ -68,14 +77,18 @@
       border-radius: 6px;
     }
 
-    /* 右側聊天面板 */
+    /* 右側聊天區：要讓出左邊的寬度 */
     .chat-panel {
-      flex: 1;
+      position: relative;
+      margin-left: 22vw;         /* ← 留出左欄空間 */
+      max-width: calc(100% - 22vw);
+      height: 100vh;             /* ← 右邊自己也要滿高 */
       display: flex;
       flex-direction: column;
       min-width: 0;
     }
     .chat-header {
+      flex: 0 0 auto;
       padding: 12px 18px;
       border-bottom: 1px solid rgba(255,255,255,0.03);
       background: radial-gradient(circle at 35% 40%, rgba(255,0,85,0.2) 0%, rgba(0,0,0,0) 45%);
@@ -85,14 +98,15 @@
       font-size: 1.1rem;
     }
 
-    /* 聊天內容區 */
+    /* 中間可捲的聊天內容 */
     .chat-body {
-      flex: 1;
+      flex: 1 1 auto;
       padding: 14px 16px 6px;
       display: flex;
       flex-direction: column;
       gap: 10px;
-      overflow-y: auto;
+      overflow-y: auto;          /* ← 只讓這裡捲 */
+      min-height: 0;             /* ← 防 overflow */
     }
     .msg {
       max-width: 68%;
@@ -114,42 +128,43 @@
       border: 1px solid rgba(255,0,85,0.2);
     }
 
-    /* 輸入區：固定高度，不要長得像怪獸 */
+    /* 下方輸入欄：固定在右下，不捲走 */
     .chat-input-bar {
+      flex: 0 0 auto;
       display: flex;
       align-items: center;
-      gap: 10px;
-      padding: 10px 12px;
-      background: rgba(0,0,0,0.3);
+      gap: 8px;
+      padding: 9px 10px 9px 10px;
+      background: rgba(0,0,0,0.35);
       border-top: 1px solid rgba(255,255,255,0.04);
-      height: 70px;             /* 固定整條高度 */
+      height: 62px;              /* ← 你嫌太高就改這裡 */
       box-sizing: border-box;
     }
     .input-wrapper {
       position: relative;
       flex: 1;
-      height: 100%;             /* 讓 textarea 跟著這條走 */
+      height: 100%;
     }
     .chat-textarea {
       width: 100%;
-      height: 100%;             /* 填滿輸入區 */
+      height: 100%;
       background: rgba(255,255,255,0.03);
       border: 1px solid rgba(255,255,255,0.06);
       border-radius: 8px;
       color: #fff;
       font-family: inherit;
-      font-size: 0.8rem;
-      padding: 6px 8px 16px;
-      resize: none;             /* 不給亂拉比例 */
+      font-size: 0.78rem;
+      padding: 6px 6px 16px;
+      resize: none;
       outline: none;
       line-height: 1.35;
       overflow-y: auto;
     }
     .hint {
       position: absolute;
-      right: 8px;
-      bottom: 2px;
-      font-size: 0.6rem;
+      right: 6px;
+      bottom: 1px;
+      font-size: 0.58rem;
       opacity: 0.35;
       pointer-events: none;
     }
@@ -157,23 +172,29 @@
       background: #2bbf72;
       border: none;
       color: #000;
-      padding: 8px 16px 9px;
+      padding: 7px 15px 8px;
       border-radius: 8px;
       font-weight: 600;
       cursor: pointer;
       transition: 0.2s;
-      min-width: 68px;
+      min-width: 60px;
+      height: 38px;
     }
     .send-btn:hover { background: #5cf5a2; }
 
     @media (max-width: 800px) {
-      .sidebar { display: none; }
-      .chat-panel { width: 100%; }
-      .chat-input-bar { height: 82px; }
+      .sidebar {
+        display: none;
+      }
+      .chat-panel {
+        margin-left: 0;
+        max-width: 100%;
+      }
     }
   </style>
 </head>
 <body>
+  <!-- 左邊固定欄 -->
   <aside class="sidebar">
     <div class="title">中庭 狀態</div>
 
@@ -204,6 +225,7 @@
     </div>
   </aside>
 
+  <!-- 右邊聊天欄 -->
   <section class="chat-panel">
     <div class="chat-header">
       <h2 id="chat-title">單人聊天</h2>
@@ -221,7 +243,6 @@
   </section>
 
   <script>
-    // ===== USER / CHAR 狀態 =====
     const USER = {
       id: "LOCAL-USER",
       name: "來訪者",
@@ -237,7 +258,6 @@
       rank: null,
     };
 
-    // ===== DOM =====
     const params = new URLSearchParams(window.location.search);
     const urlId = params.get("id");
     const urlRank = params.get("rank");
@@ -261,7 +281,6 @@
       return null;
     }
 
-    // ===== 載入角色 =====
     async function loadCharacterById(id, rank) {
       const singleUrl = getListUrl(rank);
       try {
@@ -303,7 +322,6 @@
         sbStatus.classList.remove("status-err");
         sbStatus.classList.add("status-ok");
         chatTitle.textContent = "單人聊天｜" + (CHAR.zh || CHAR.id);
-
         return CHAR;
       } catch (err) {
         console.error(err);
@@ -314,7 +332,6 @@
       }
     }
 
-    // ===== 訊息 helper =====
     function addMsg(text, who = "me") {
       const wrap = document.createElement("div");
       wrap.className = "msg " + who;
@@ -325,7 +342,6 @@
     function addNpcMsg(text)   { addMsg(text, "npc"); }
     function addSystemMsg(text){ addMsg("【系統】" + text, "npc"); }
 
-    // ===== 指令處理 =====
     async function handleCommand(input) {
       const parts = input.trim().split(/\s+/);
       const cmd = parts.shift().toLowerCase();
@@ -368,7 +384,6 @@
       }
     }
 
-    // ===== 送出訊息 =====
     function replacePlaceholders(text) {
       return text
         .replace(/\{USER\.name\}/g, USER.name)
@@ -383,7 +398,6 @@
       const txt = raw.trim();
       if (!txt) return;
 
-      // 指令
       if (txt.startsWith("/")) {
         addMsg(txt, "me");
         chatInput.value = "";
@@ -395,18 +409,16 @@
       addMsg(final, "me");
       chatInput.value = "";
 
-      // 暫時假回覆
       setTimeout(() => {
         const name = CHAR.zh || CHAR.en || CHAR.id || "該角色";
         addNpcMsg(`[${name}] 收到了你的訊息：${final}`);
       }, 200);
     }
 
-    // 鍵盤事件
     chatInput.addEventListener("keydown", (e) => {
       if (e.key === "Enter") {
         if (e.shiftKey) {
-          return; // 換行
+          return;
         } else {
           e.preventDefault();
           sendCurrent();
@@ -415,7 +427,6 @@
     });
     sendBtn.addEventListener("click", sendCurrent);
 
-    // ===== 初始化 =====
     (async function init() {
       if (!urlId) {
         sbStatus.textContent = "沒有給 ID";
