--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     }
 
     .glassbox {
-      background: rgba(43, 43, 43, 0.25); /* 灰偏黑、透明度25% */
+      background: rgba(43, 43, 43, 0.25);
       border-radius: 18px;
       box-shadow: 0 0 25px rgba(53, 53, 53, 0.3);
       backdrop-filter: blur(2px) brightness(1);
@@ -27,30 +27,7 @@
       padding: 40px 60px;
       text-align: center;
       max-width: 800px;
-      border: 1px solid rgba(255, 255, 255, 0.15); /* 加點亮邊線 */
-    }
-
-    .button-container {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-bottom: 25px;
-    }
-
-    .button-container a {
-      font-size: 18px;
-      border: 1px solid rgba(255,255,255,0.5);
-      background: rgba(255,255,255,0.1);
-      padding: 10px 25px;
-      border-radius: 10px;
-      transition: all 0.3s ease;
-      color: #fff;
-      text-decoration: none;
-    }
-
-    .button-container a:hover {
-      background: rgba(255,255,255,0.35);
-      transform: scale(1.05);
+      border: 1px solid rgba(255, 255, 255, 0.15);
     }
 
     h1 {
@@ -64,6 +41,58 @@
       line-height: 1.6;
       margin: 0 auto 25px;
       text-shadow: 0 0 8px rgba(0,0,0,0.6);
+    }
+
+    /* ↓ 新選單樣式 ↓ */
+    .dropdown {
+      position: relative;
+      display: inline-block;
+      margin-bottom: 25px;
+    }
+
+    .dropbtn {
+      font-size: 20px;
+      color: #fff;
+      background: rgba(255,255,255,0.15);
+      border: 1px solid rgba(255,255,255,0.5);
+      padding: 12px 30px;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .dropbtn:hover {
+      background: rgba(255,255,255,0.3);
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(30,30,30,0.9);
+      backdrop-filter: blur(6px);
+      border: 1px solid rgba(255,255,255,0.2);
+      border-radius: 10px;
+      min-width: 220px;
+      z-index: 2;
+      text-align: left;
+    }
+
+    .dropdown-content a {
+      display: block;
+      padding: 10px 15px;
+      text-decoration: none;
+      color: #fff;
+      transition: 0.2s;
+    }
+
+    .dropdown-content a:hover {
+      background: rgba(255,255,255,0.2);
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
     }
 
     a.main-link {
@@ -91,13 +120,19 @@
       有些門會在夢裡才打開。
     </p>
 
-    <div class="button-container">
-      <a href="solo.html">單人聊天</a>
-      <a href="group.html">群體聊天</a>
+    <!-- ↓ 新下拉選單 ↓ -->
+    <div class="dropdown">
+      <button class="dropbtn">進入系統 ▾</button>
+      <div class="dropdown-content">
+        <a href="solo.html">單人聊天</a>
+        <a href="group.html">群體聊天</a>
+        <a href="create.html">建立角色</a>
+        <a href="profile.html">使用者角色卡</a>
+      </div>
     </div>
 
+    <br>
     <a href="index.html" class="main-link">回到入口</a>
   </div>
 </body>
 </html>
-
