--- a/solo.html
+++ b/solo.html
@@ -17,7 +17,7 @@
       margin: 0;
       min-height: 100vh;
       background: url('bark.png') no-repeat center center fixed;
-      background-size: cover;
+      background-size: 60%;
       font-family: "標楷體", "Times New Roman", serif;
       color: #fff;
       display: flex;
