--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
       justify-content: center;
       align-items: center;
       background: url('bark.png') no-repeat center center fixed;
-      background-size: cover;
+      background-size: 60%;
       font-family: "標楷體", "Times New Roman", serif;
       color: #fff;
     }
