--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       justify-content: center;
       align-items: center;
       background: url('bark.png') no-repeat center center fixed;
-      background-size: 85%;
+      background-size: auto;
       font-family: "標楷體", "Times New Roman", serif;
       color: #fff;
     }
