--- a/solo.html
+++ b/solo.html
@@ -17,7 +17,8 @@
       margin: 0;
       min-height: 100vh;
       background: url('bark.png') no-repeat center center fixed;
-      background-size: 60%;
+       background-size: contain;   /* 保留完整比例、不裁切 */
+       background-color: #000;     /* 補邊顏色防止空白 */
       font-family: "標楷體", "Times New Roman", serif;
       color: #fff;
       display: flex;
