--- a/about.html
+++ b/about.html
@@ -14,7 +14,8 @@
       justify-content: center;
       align-items: center;
       background: url('bark.png') no-repeat center center fixed;
-      background-size: 60%;
+       background-size: contain;   /* 保留完整比例、不裁切 */
+       background-color: #000;     /* 補邊顏色防止空白 */
       font-family: "標楷體", "Times New Roman", serif;
       color: #fff;
     }
